MDEV-8189 field<>const and const<>field are not symmetric